--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <li><a href="box-model.html#diferencia-elementos-linea-bloque">Diferencia entre elementos de línea
                             Vs elementos de bloque</a>
                     </li>
-                    <li><a href="box-model.html#propiedad-display">Propiedad display</a></li>
+                    <li><a href="box-model.html#propiedad-display">Propiedad display (Visualización)</a>
+                    </li>
+                    <li><a href="box-model.html#propiedad-visibility">Propiedad visibility</a></li>
                 </ol>
             </li>
 
