--- a/box-model.html
+++ b/box-model.html
@@ -32,7 +32,10 @@
             </li>
             <li><a href="box-model.html#propiedad-display">Propiedad display (Visualización)</a>
             </li>
-            <li><a href="box-model.html#propiedad-visibility">Propiedad visibility (Visibilidad)</a></li>
+            <li><a href="box-model.html#propiedad-visibility">Propiedad visibility (Visibilidad)</a>
+            </li>
+            <li><a href="box-model.html#propiedad-overflow">Propiedad overflow</a></li>
+            <li><a href="box-model.html#tamano-caja">Tamaño de las cajas</a></li>
 
         </ol>
 
@@ -304,6 +307,38 @@
         </div>
 
         <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="box-model.html#inicio-modelo-caja" class="volver-inicio">🔼 Ir a inicio Modelo de caja</a>
+        <hr>
+    </article>
+
+    <article id="propiedad-overflow">
+        <h2>Propiedad overflow</h2>
+        <p>Esta propiedad nos permite decir que va a pasar con el contenido que desborde su
+            caja contenedora, la utilizamos cuando no sepamos si el contenido que va a tener
+            una caja la desborda, esto para evitar que el texto no se vea o se monte sobre
+            otro elemento..
+        </p>
+        <p>
+            Enlace a documentacion sobre la propiedad overflow: <a href="https://cssreference.io/property/overflow/"
+                target="_blank">Cssreference</a>
+        </p>
+
+        <h4>Ejemplos:</h4>
+        <p class="overflow">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ea, esse unde
+            magnam incidunt cumque iure, error tempore perspiciatis facere fugit, nobis
+            atque pariatur a. Eveniet veritatis et autem? Exercitationem.
+        </p>
+
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="box-model.html#inicio-modelo-caja" class="volver-inicio">🔼 Ir a inicio Modelo de caja</a>
+        <hr>
+    </article>
+
+    <article id="tamano-caja">
+        <h2>Tamaño de las cajas</h2>
+
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <a href="box-model.html#inicio-modelo-caja" class="volver-inicio">🔼 Ir a inicio Modelo de caja</a>
         <hr>
