--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                     <li><a href="box-model.html#propiedad-display">Propiedad display (Visualización)</a>
                     </li>
                     <li><a href="box-model.html#propiedad-visibility">Propiedad visibility</a></li>
+                    <li><a href="box-model.html#propiedad-overflow">Propiedad overflow</a></li>
+                    <li><a href="box-model.html#tamano-caja">Tamaño de las cajas</a></li>
                 </ol>
             </li>
 
