--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <li><a href="index.html#prefijos-navegadores">Prefijos de los navegadores</a></li>
             <li><a href="box-model.html#inicio-modelo-caja">Modelo de caja en css (Box model)</a>
                 <ol type="a">
+                    <li><a href="box-model.html#que-es-modelo-caja">Que es el modelo de caja</a></li>
                     <li><a href="box-model.html#propiedades-ancho-alto">Propiedades width & height</a></li>
                     <li><a href="box-model.html#bordes">Propiedad border</a></li>
                     <li><a href="box-model.html#margin-padding">Propiedades Margin & Padding</a></li>
