--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
                     </li>
                     <li><a href="box-model.html#propiedad-visibility">Propiedad visibility</a></li>
                     <li><a href="box-model.html#propiedad-overflow">Propiedad overflow</a></li>
-                    <li><a href="box-model.html#tamano-caja">Tamaño de las cajas</a></li>
+                    <li><a href="box-model.html#tamano-caja">Tamaño de las cajas (Box-sizing)</a></li>
+                    <li><a href="box-model.html#propiedades-float-clear">Propiedades float & clear</a>
+                    </li>
+                    <li><a href="box-model.html#colapso-margenes-verticales">Colapso de margenes verticales</a></li>
+                    <li><a href="box-model.html#adicion-margenes-horizontales">Adición de márgenes horizontales</a></li>
+                    <li><a href="box-model.html#centrado-cajas">Centrado de Cajas</a></li>
+
                 </ol>
             </li>
 
