--- a/box-model.html
+++ b/box-model.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
 <body>
     <h1 id="inicio-modelo-caja">Modelo de caja en css (Box model)</h1>
 
-    <article id="temario.modelo-caja">
+    <article id="temario-modelo-caja">
         <h2>Temario modelo de caja</h2>
         <ol type="a">
             <li><a href="box-model.html#que-es-modelo-caja">Que es el modelo de caja</a></li>
@@ -510,8 +510,19 @@
     <article id="centrado-cajas">
         <h2>Centrado de Cajas</h2>
 
+        <p>La manera de centrar una caja o elemento HTML (no su contenido) es darle un valor
+            "auto" a ambos margenes laterales, tanto a margin-right como a margin-left.
+        </p>
+        <p>El valor "auto" significa, ajustalo automaticamente.</p>
 
+        <h4>Ejemplos:</h4>
+        <article class="sitio-web">
+            <header>cabecera</header>
+            <main>Contenido Principal</main>
+            <footer>Pié de pagina</footer>
+        </article>
 
+        <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <a href="box-model.html#inicio-modelo-caja" class="volver-inicio">🔼 Ir a inicio Modelo de caja</a>
         <hr>
