--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 </ol>
             </li>
 
+            <li><a href="positions.html#inicio-posicionamiento-css">Posicionamiento en css</a></li>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
