--- a/box-model.html
+++ b/box-model.html
@@ -23,7 +23,7 @@
     <article id="temario-modelo-caja">
         <h2>Temario modelo de caja</h2>
         <ol type="a">
-            <li><a href="box-model.html#que-es-modelo-caja">Que es el modelo de caja</a></li>
+            <li><a href="box-model.html#que-es-modelo-caja">¿Que es el modelo de caja?</a></li>
             <li><a href="box-model.html#propiedades-ancho-alto">Propiedades width & height</a></li>
             <li><a href="box-model.html#bordes">Propiedad border</a></li>
             <li><a href="box-model.html#margin-padding">Propiedades Margin & Padding</a></li>
@@ -51,7 +51,7 @@
     </article>
 
     <article id="que-es-modelo-caja">
-        <h2>Que es el modelo de caja</h2>
+        <h2>¿Que es el modelo de caja?</h2>
         <p>El modelo de caja es la forma como css ve las etiquetas HTML, se llama
             modelo de caja (o box model) porque para css cada uno de los elementos o etiquetas
             de HTML son un caja y pueden ser cajas de línea o cajas de bloque.
