--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a href="index.html#prefijos-navegadores">Prefijos de los navegadores</a></li>
             <li><a href="box-model.html#inicio-modelo-caja">Modelo de caja en css (Box model)</a>
                 <ol type="a">
-                    <li><a href="box-model.html#que-es-modelo-caja">Que es el modelo de caja</a></li>
+                    <li><a href="box-model.html#que-es-modelo-caja">¿Que es el modelo de caja?</a></li>
                     <li><a href="box-model.html#propiedades-ancho-alto">Propiedades width & height</a></li>
                     <li><a href="box-model.html#bordes">Propiedad border</a></li>
                     <li><a href="box-model.html#margin-padding">Propiedades Margin & Padding</a></li>
@@ -100,6 +100,13 @@
             </li>
 
             <li><a href="positions.html#inicio-posicionamiento-css">Posicionamiento en css</a></li>
+            <ol type="a">
+                <li><a href="positions.html#que-es-posicionamiento">¿Que es el posicionamiento en css?</a></li>
+                <li>
+                    <a href="positions.html#posicionamiento-static">Posicionamiento static</a>
+                </li>
+
+            </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
