--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
                 <li>
                     <a href="positions.html#posicionamiento-static">Posicionamiento static</a>
                 </li>
+                <li>
+                    <a href="positions.html#posicionamiento-relative">Posicionamiento relative</a>
+                </li>
+                <li>
+                    <a href="positions.html#posicionamiento-absolute">Posicionamiento absolute</a>
+                </li>
+                <li>
+                    <a href="positions.html#posicionamiento-fixed">Posicionamiento fijo (fixed)</a>
+                </li>
+                <li>
+                    <a href="positions.html#posicionamiento-sticky">Posicionamiento sticky o pegajoso</a>
+                </li>
+                <li>
+                    <a href="positions.html#propiedad-z-index">Propiedad z-index</a>
+                </li>
 
             </ol>
 
