--- a/index.html
+++ b/index.html
@@ -120,8 +120,18 @@
                 <li>
                     <a href="positions.html#propiedad-z-index">Propiedad z-index</a>
                 </li>
-
             </ol>
+
+            <li>
+                <a href="positions-examples.html">Ejercicios practicos de
+                    posicionamiento en css</a>
+            </li>
+            <ol type="a">
+                <li>
+                    <a href="positions-examples.html#cabecera-fixed-vs-sticky">Cabecera fixed Vs Cabecera sticky</a>
+                </li>
+            </ol>
+
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
