--- a/positions.html
+++ b/positions.html
@@ -41,6 +41,7 @@
             <li>
                 <a href="positions.html#propiedad-z-index">Propiedad z-index</a>
             </li>
+
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -241,10 +242,37 @@
     </article>
 
     <article id="propiedad-z-index">
-        <h2>Propiedad z-index</h2>
+        <h2>La propiedad z-index</h2>
 
+        <p>La propiedad <b>z-index</b> nos va a permitir controlar la profundidad de los
+            elementos posicionados, su valor por defecto es auto, acepta números positivos,
+            negativos y cero.
+        </p>
 
+        <p>A mayor valor el elemento esta más al frente, a menor valor más al fondo</p>
 
+        <p>
+            Es recomendable utilizar valores de 10 en 10 o de 100 en 100, nunca de uno en
+            uno.
+        </p>
+
+        <p>
+            Un elemento padre nunca podra estar sobre sus elementos hijos, sin embargo los
+            lementos hijos si pueden dandoles un valor negativo y que el elemento padre no
+            tenga definido valor de z-index.
+        </p>
+
+        <p>
+            z-index funciona en cualquier valor ecepto en static que es el valor por defecto
+        </p>
+
+        <h4>Ejemplos:</h4>
+        <div class="z-index-1">Probando z-index caja 1</div>
+        <div class="z-index-2">Probando z-index caja 2</div>
+
+        <section class="z-index-parent">
+            <div class="z-index-child">Hijo z-index</div>
+        </section>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
